...
                            Spacer(Modifier.width(5.dp))
                            Text("更多")
                        }
                        Button(onClick = { editing = true }, modifier = Modifier.weight(1f)) {
                            Icon(Icons.Outlined.Edit, null, Modifier.size(18.dp))
                            Spacer(Modifier.width(5.dp))
                            Text("编辑")
                        }
                    }
                }
            }
        },
    ) { padding ->
...
